test/zinc_source/compile_errors/concurrency/01_select_duplicate_default.zn
// expected-error: select supports at most one default case

fn main() {
    select {
        default {
            print("first")
        }
        default {
            print("second")
        }
    }
}
